---------------------------------------------------------------------------------------------------
Version: 0.7.000
Date: 2025-12-07
  The 2 months? you are insane Update:

  Additions:
    - Added Osmium.
    - Added Iridium.
    - Added Tantalum.
    - Added Niobium.
    - Added Inconel 625! its current use is as a new type of heating coil, which is the only coil that can add productivity.
    - Finally added nitric acid! unlocked in A-ATM science so i can actually use it for anything, it will replace some recipes use of nitrogen/fluids.
    - Also added aqua regia, which is why nitric acid even got added! it was now or when i got to 0.8/0.9, so

  Changes:
    - Slightly nerfed research productivity.
    - Changed barium nitrate to use nitric acid.

---------------------------------------------------------------------------------------------------
Version: 0.6.503
Date: 2025-14-07
  The doing daily updates for the inflated download count, no other reason Update:

  Changes:
    - Changed concrete/refined concrete to take 4 heavyweight framing instead of 5.
    - Lowered all crafting times of heating coils from 10s to 7.5s.
    - Changed the tech icon for syngas processing to just the fluid icon for sygnas, as a slightly better placeholder.
    - Reworked how research speed bonuses work to match with 0.7. (+10%, +10%, +20%, +20%, +40%, +40%, +60%, +60%, +80%, +80%, +100%, etc)
    - Updated advanced transition metal refining's tech icon.
    - Updated mercury vapour icon.

  Fixes:
    - Fixed ordering of recipes in advanced transition metal refining technology.
    - Fixed gold/silver ore recipe icons.

---------------------------------------------------------------------------------------------------
Version: 0.6.502
Date: 2025-13-07
  The 2 updates in one day that arent purely bugfixes? it must be christmas Update:

  Changes:
    - Finally modelled a cadmium plate, and updated the icons that use them.
    - Updated cadmium tech icon.

  Fixes: